Integrated phrasal