@@ -1,9 +1,12 @@
 #!/usr/bin/env bash
 
+MEM=9g
+JAVA_OPTS="-server -ea -Xmx${MEM} -Xms${MEM} -XX:+UseParallelGC -XX:+UseParallelOldGC -XX:PermSize=256m -XX:MaxPermSize=256m"
+DECODER_OPTS="-Djava.library.path=/home/rayder441/sandbox/javanlp/projects/mt/src-cc"
+
 CP=/home/rayder441/sandbox/javanlp/projects/core/classes:/home/rayder441/sandbox/javanlp/projects/mt/classes:/home/rayder441/sandbox/javanlp/projects/mt/lib/*:/home/rayder441/sandbox/javanlp/projects/more/classes:/home/rayder441/sandbox/javanlp/projects/mt/lib-research/*:
 
 # Add the static content for debugging
 #CP="$CP":/home/rayder441/sandbox/javanlp/projects/mt/src-research/
 
-
-java -Xmx1g -Xms1g -server -cp "$CP" edu.stanford.nlp.mt.tools.service.PhrasalService -d
+java $JAVA_OPTS $DECODER_OPTS -cp "$CP" edu.stanford.nlp.mt.tools.service.PhrasalService $*
